@@ -1,3 +1,8 @@
+2002-08-03	Jakub Skopal	<j@kubs.cz>
+
+ * changes in jnettop.c to use select() and avoid 100% processor time
+   consumption on systems, which support it (Linux)
+
 2002-08-31	Jakub Skopal	<j@kubs.cz>
 
  * modified configure.ac, so that it uses -Wall when compiling with GCC.
@@ -38,4 +43,4 @@
 
  * initial release
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.10 2002-09-02 15:23:06 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.11 2002-09-03 20:49:00 merunka Exp $
